--- a/index.html
+++ b/index.html
@@ -60,31 +60,31 @@
         <nav class="flex flex-row items-center w-auto mx-8">
             <ul class="flex justify-start text-lg">
                 <li class="px-2">
-                    <a class="text-zinc-200 rounded-md hover:text-yellow-500 transition-colors block" href="teste.html">
+                    <a class="text-zinc-200 rounded-md hover:text-yellow-500 transition-colors block" href="#">
                         Biblioteca
                     </a>
                 </li>
                 <li class="px-2">
                     <a class="text-zinc-200 rounded-md hover:text-yellow-500 transition-colors block"
-                        href="#diferencas">
-                        Frameworks
+                        href="#framework">
+                        Framework
                 </li>
                 <li class="px-2">
                     <a class="text-zinc-200 rounded-md  hover:text-yellow-500 transition-colors block"
-                        href="#motivacao">
-                        Diferenças
+                        href="#importação">
+                        Importação
                     </a>
                 </li>
                 <li class="px-2">
                     <a class="text-zinc-200 rounded-md hover:text-yellow-500 transition-colors block"
-                        href="#escola-piloto">
-                        Escola Piloto
+                        href="#terminal">
+                        Terminal
                     </a>
                 </li>
                 <li class="px-2">
                     <a class="text-zinc-200 rounded-md hover:text-yellow-500 transition-colors block"
-                        href="#desenvolvedores">
-                        Desenvolvedores
+                        href="#alunos">
+                        Alunos
                     </a>
                 </li>
             </ul>
@@ -95,7 +95,7 @@
         <section class="flex w-full h-auto justify-center flex-wrap overflow-x-hidden">
             <div class="w-full flex justify-evenly gap-16 items-center mt-0 m-12">
                 <div class="w-[30rem] flex-col flex justify-center">
-                    <h2 class="text-4xl font-bold text-white pb-6 ">
+                    <h2 id="biblioteca" class="text-4xl font-bold text-white pb-6 ">
                         O que é uma <span class="text-yellow-400">Biblioteca?</span>
                     </h2>
                     <p class="text-zinc-300 text-justify">
@@ -153,11 +153,11 @@
             <img class="w-1/2" src="/imgs/fatorial2.img" alt="img">
             <h3 class="text-3xl pt-12 font-bold text-white pb-8 ">Usando a biblioteca:</h3>
             <img class="w-1/2" src="/imgs/fatorial.img" alt="img">
-            <p class="w-[38rem] py-10 text-zinc-300">Com isso vimos a diferença e a importância de usar uma biblioteca.
+            <p id="importação" class="w-[38rem] py-10 text-zinc-300">Com isso vimos a diferença e a importância de usar uma biblioteca.
                 Com ela podemos deixar nosso código mais organizado, limpo e com menos linhas, sendo assim muito mais
                 fácil para um programador entender o código.</p>
             <h3 class="text-3xl pt-12 font-bold text-white pb-8">Como importar uma biblioteca para seu código ?</h3>
-            <p class="w-[38rem] text-zinc-300 ">Para importar uma biblioteca é muito simples, no python por exemplo
+            <p id="framework" class="w-[38rem] text-zinc-300 ">Para importar uma biblioteca é muito simples, no python por exemplo
                 usamos
                 o comando <span class="text-yellow-300 font-semibold">Import <span class="text-red-600">{nome da
                         biblioteca}</span></span><br>Para entender uma biblioteca e explorar suas funcionalidades é
@@ -166,11 +166,11 @@
                     href="https://docs.python.org/3/library/math.html">Math</a> que acabamos de utilizar</p>
         </section>
         <!--Frameworks-->
-        <section
+        <section 
             class="bg-gradient-to-b to-zinc-900 from-zinc-950 to-30 from-70 flex w-full h-auto justify-center flex-wrap overflow-x-hidden">
             <div class="w-full flex justify-evenly flex-row-reverse gap-16 items-center mt-0 m-12">
                 <div class="w-[30rem] flex-col flex justify-center">
-                    <h2 class="text-4xl font-bold text-white pb-6 ">
+                    <h2  class="text-4xl font-bold text-white pb-6 ">
                         Agora vamos falar sobre <span class="text-cyan-300">Frameworks</span>
                     </h2>
                     <p class="text-zinc-300 text-justify">
@@ -312,13 +312,13 @@
             </div>
         </section>
         <article class="pb-16 w-full flex flex-col items-center bg-zinc-900 px-12">
-            <h4 class="text-2xl pt-12 font-bold text-center text-white pb-8">Instalando o <span
+            <h4 id="terminal" class="text-2xl pt-12 font-bold text-center text-white pb-8">Instalando o <span
                     class="text-teal-300">React</span></h4>
             <p class="text-zinc-300 text-justify w-[38rem]">Com o <span class="font-semibold text-green-700">Node.js
                 </span>instalado e configurado em seu computador podemos iniciar a criação do nosso projeto react.</p>
             <h4 class="text-2xl pt-12 font-bold text-center text-white pb-8">Abra o <span
                     class="text-fuchsia-500">Terminal</span></h4>
-            <p class="text-zinc-300 text-center w-[38rem] ">E digite os seguintes comandos:</p>
+            <p  class="text-zinc-300 text-center w-[38rem] ">E digite os seguintes comandos:</p>
             <br>
             <!--Div terminal-->
             <div class="bg-black w-[40rem] p-4">
@@ -359,7 +359,7 @@
             </div>
             <hr class="my-1 border-gray-600 border-spacing-1 w-screen" />
             <span class="block text-sm text-center text-gray-500 pt-3">
-                <a href="#">
+                <a id="alunos" href="#">
                     Erica Beatriz n° 5, Gustavo Henrique n° 9
                 </a>
             </span>
